--- a/src/main/resources/templates/new-team.html
+++ b/src/main/resources/templates/new-team.html
@@ -20,7 +20,7 @@
 
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <!--Brand-->
-  <a class="navbar-brand" href="#">E-Times</a>
+  <a class="navbar-brand" href="#">E-Teams</a>
   <!--Links-->
   <ul class="navbar-nav">
     <li class="navbar-item active">
