--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,6 +53,10 @@
                 <tr th:each="player : ${allPlayers}">
                     <td th:text="${player.fullName}"></td>
                     <td th:text="${player.function}"></td>
+                    <td>
+                        <a href="#"><b>Edit</b></a>
+                        <a href="#" style="color:red"><b>Delete</b></a>
+                    </td>
                 </tr>
             </table>
 
@@ -61,8 +65,10 @@
 
         </div>
 
-        <!--Teams Table-->
+        <!--Tables Division-->
         <div class="col-sm-2"></div>
+
+        <!--Teams Table-->
         <div class="col-sm-4" style="margin-left:15px">
             <h6>Teams</h6>
             <table id="teams_table" class="table table-striped table-hover table-light">
@@ -71,6 +77,10 @@
                 </thead>
                 <tr th:each="team : ${allTeams}">
                     <td th:text="${team.name}"></td>
+                    <td>
+                        <a th:href="@{/team/{id}(id=${team?.id})}"><b>Edit</b></a>
+                        <a href="#" style="color:red"><b>Delete</b></a>
+                    </td>
                 </tr>
             </table>
 
@@ -78,6 +88,7 @@
             <br/><b><a href="#" th:href="@{/new-team}">New Team</a></b>
 
         </div>
+
     </div>
 
 </div>
